--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -1,6 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.jacob.circle.list.ListItemView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="85dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -15,8 +15,9 @@
         android:id="@+id/text_view"
         android:textSize="17sp"
         android:layout_margin="10dp"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world"/>
 
-</LinearLayout>
+</com.jacob.circle.list.ListItemView>
